solve flickering on scroll transition animation - change easing from ExpoOut to Power4InOut pt.X

--- a/src/static/style/css/app.css
+++ b/src/static/style/css/app.css
@@ -4286,6 +4286,9 @@ $grid-width: 114rem;
     left: 0;
     -webkit-transform: translate3d(0, 100%, 0);
             transform: translate3d(0, 100%, 0);
+
+    -webkit-backface-visibility: hidden;
+	  -webkit-perspective: 1000;
   }
   
   .h-text-desc-txt-wrap {
@@ -4302,6 +4305,9 @@ $grid-width: 114rem;
     font-size: calc(0.4rem + 0.718vw);
     -webkit-transform: translate3d(0, 100%, 0);
             transform: translate3d(0, 100%, 0);
+
+    -webkit-backface-visibility: hidden;
+	  -webkit-perspective: 1000;
   }
   
   .h-bottom-title {
